evaluation/test_suite/negative/ub41/3.c
#include <stdio.h>

int main()
{
    int x = 1;
    printf("%d\n", 0 % x);
}
